# Homework_9

./: CMakeLists.txt
inc/: figure.h  main.h  operations.h
src/: figure.cpp  main.cpp  operations.cpp
